--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,11 +7,29 @@
 
     <!-- CSS -->
     <link href="{{STATIC_URL}}vendor/bootstrap/css/bootstrap.css" rel="stylesheet"/>
-
+    <!-- JS -->
+    <script src="{{STATIC_URL}}vendor/bootstrap/js/bootstrap.min.js"></script>
     {% block head %}{% endblock %}
   </head>
 
   <body>
+      <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/">Habakkuk</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="http://technicalelvis.com/blog">Telvis' Blog</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
    {% block content %}
    {% endblock content %}
    {% block endofbody %}
