change language on web

--- a/web/static/clustering/partials/clustering.html
+++ b/web/static/clustering/partials/clustering.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span2">
-        <h2>Facet Counts</h2>
+        <p>Click to filter groups on the right (click again to see all)</p>
         <table class="table table-hover table-bordered table-condensed" >
           <thead>
             <tr>
@@ -17,7 +17,7 @@
       </div> <!-- span2 -->
 
       <div class="span10">
-        <h2>Clusters visualization</h2>
+        <h4>Bibleverses grouped by usage on twitter</h>
         <hkuk-clusters-viz clusters='clusters'></hkuk-clusters-viz>
       </div>
     </div>
