another minor edit to filter help text

--- a/web/static/clustering/partials/clustering.html
+++ b/web/static/clustering/partials/clustering.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span2">
-        <p>Click to filter groups on the right (click again to see all)</p>
+        <p>Click to filter twitter groups that contain the selected bibleverse (click again to see all)</p>
         <table class="table table-hover table-bordered table-condensed" >
           <thead>
             <tr>
