change version to alpha

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">Habakkuk [BETA] </a>
+          <a class="brand" href="/">Habakkuk [ALPHA] </a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="http://technicalelvis.com/blog">Telvis' Blog</a></li>
