--- a/web/static/clustering/partials/clustering.html
+++ b/web/static/clustering/partials/clustering.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span2">
-        <p>Click to filter twitter groups that contain the selected bibleverse (click again to see all)</p>
+        <p>Select a specific Bible verse</p>
         <table class="table table-hover table-bordered table-condensed" >
           <thead>
             <tr>
@@ -17,7 +17,7 @@
       </div> <!-- span2 -->
 
       <div class="span10">
-        <h4>Bibleverses grouped by usage on twitter</h>
+        <h4>Bibleverses grouped by usage on twitter</h4>
         <hkuk-clusters-viz clusters='clusters'></hkuk-clusters-viz>
       </div>
     </div>
