base html/css refactor + clustering view changes

--- a/web/static/clustering/partials/clustering.html
+++ b/web/static/clustering/partials/clustering.html
@@ -1,3 +1,4 @@
+<!-- NOTE: This partial is not used any longer. Should be removed in the future -->
 <div ng-controller='ClusterCtrl'>
   <div class="container-fluid">
     <div class="row-fluid">
