--- a/web/templates/biblestudy.html
+++ b/web/templates/biblestudy.html
@@ -1,33 +1,39 @@
 {% extends "base.html" %}
 {% load jsonify %}
-{% block title %}Bible Study{%endblock%}
+{% block title %}Bible Verse Recommendations{%endblock%}
 {% block head %}
-
-    <link href="{{STATIC_URL}}clustering/clustering.css" rel="stylesheet">
     <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
+        body {
+            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        }
     </style>
-    <script src="{{ STATIC_URL }}vendor/jquery/jquery-1.9.1.min.js"></script>
-    <script src="{{ STATIC_URL }}vendor/datatables/jquery.dataTables.js"></script>
-    <script src="{{ STATIC_URL }}vendor/angular/angular.min.js"></script>
-    <script src="{{ STATIC_URL }}vendor/d3/d3.v3.js"></script>
-    <script src="{{ STATIC_URL }}vendor/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
 
-    <script type="text/javascript">
-        <!-- bootstrapped data from django -->
-        var HK = {};
-        HK.clusters = {{ clusters | jsonify }};
-        HK.facets = {{ facets | jsonify }};
-    </script>
-    <script src="{{STATIC_URL}}clustering/clustering.js"></script>
+    <script src="{{ STATIC_URL }}vendor/jquery/jquery-1.9.1.min.js"></script>
+    <script src="{{ STATIC_URL }}vendor/angular/angular.min.js"></script>
+    <script src="{{ STATIC_URL }}vendor/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
+    <script src="{{ STATIC_URL }}biblestudy/biblestudy.js"></script>
 {% endblock %}
 
 {% block content %}
-   <div ng-app='clusterApp'>
-       <ng-include
-               src="'{{STATIC_URL}}clustering/partials/clustering.html'">
-       </ng-include>
-   </div>
-{% endblock %}
+    <div ng-app='bibleStudyApp'>
+        {{ block.super }}
+    </div>
+{% endblock content %}
+
+{% block help %}
+    <em>Select or Search for a scripture and Habakkuk will recommend other
+        verses based on their usage on Twitter </em>
+{% endblock help %}
+
+{%  block sidebar_content %}
+    <ng-include
+            src="'{{ STATIC_URL }}biblestudy/partials/biblestudy-sidebar.html'">
+    </ng-include>
+{%  endblock sidebar_content %}
+
+{%  block body_content %}
+    <!-- body_content -->
+    <ng-include
+            src="'{{ STATIC_URL }}biblestudy/partials/biblestudy-content.html'">
+    </ng-include>
+{%  endblock body_content %}
