added biblestudy sidebar

--- a/web/static/biblestudy/partials/biblestudy-sidebar.html
+++ b/web/static/biblestudy/partials/biblestudy-sidebar.html
@@ -1,2 +1,11 @@
-<p>bible study sidebar</p>
+<div class="row">
+    <form class="navbar-form pull-left">
+        <input type="text">
+        <button type="submit" class="btn">Submit</button>
+    </form>
+</div>
 
+<div class="row">
+    <p class="table-leader">Select a specific Bible verse</p>
+    <div class="gridStyle" ng-grid="gridOptions"></div>
+</div>
