--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,6 +22,8 @@
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
+                    <li class="active"><a href="/biblestudy/">Bible Study</a></li>
+                    <li class="active"><a href="/clusters/">Clusters</a></li>
                     <li class="active"><a href="http://technicalelvis.com/blog">About</a></li>
                     <li class="active"><a href="mailto:me@technicalelvis.com?Subject=User%20feedback" target="_top">Contact</a>
                     </li>
