--- a/web/static/clustering/partials/clustering-sidebar.html
+++ b/web/static/clustering/partials/clustering-sidebar.html
@@ -1,3 +1,4 @@
+<p>Select a Bible verse from the table to filter the clusters.</p>
 <table class="table table-hover table-bordered table-condensed" >
     <thead>
     <tr>
