--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,9 +8,10 @@
     <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet"/>
     <link href="{{ STATIC_URL }}vendor/bootstrap/css/bootstrap.css" rel="stylesheet"/>
     <!-- JS -->
+    <script src="{{ STATIC_URL }}vendor/jquery/jquery-1.9.1.min.js"></script>
     <script src="{{ STATIC_URL }}vendor/bootstrap/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %}</title>
+    <title>Habakkuk [Alpha]</title>
     {% block head %}{% endblock head %}
 </head>
 
@@ -25,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Data Driven Bible Study [Alpha]</a>
+          <a class="navbar-brand" href="#">Habakkuk [Alpha]</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -43,13 +44,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p class="muted">{% block help %} {% endblock help %}</p>
+              <div class="page-header">
+                <h1>{% block title %}{% endblock title %}</h1>
+                <p class="lead">{% block help %} {% endblock help %}</p>
+              </div>
                 <div class="row">
+                    <!-- Sidebar -->
                     <div class="col-md-4">
                         {% block sidebar_content %} {% endblock sidebar_content %}
                     </div>
-                    <!-- span2 -->
 
+                    <!-- Body Content -->
                     <div class="col-md-8">
                         {% block body_content %}{% endblock body_content %}
                     </div>
