--- a/web/templates/biblestudy.html
+++ b/web/templates/biblestudy.html
@@ -18,9 +18,19 @@
                               "recommendations":["Book 1:1", "Book 1:2", "Book 1:3"]},
                               {"bibleverse":"1 John 4:19",
                               "text":"We love because he first loved us.",
-                              "recommendations":["Book 2:1", "Book 2:2", "Book 2:3"]}
+                              "recommendations":["Book 2:1", "Book 2:2", "Book 2:3"]},
+                              {"bibleverse":"1 Corinthians 13:4",
+                              "text":"Love is patient, love is kind. It does not envy, it does not boast, it is not proud.",
+                              "recommendations":["Book 2:1", "Book 2:2", "Book 2:3"]},
+                              {"bibleverse":"1 Corinthians 13:13",
+                              "text":"And now these three remain: faith, hope and love. But the greatest of these is love.",
+                              "recommendations":["Book 2:1", "Book 2:2", "Book 2:3"]},
+                              {"bibleverse":"Psalm 37:23",
+                              "text":"The steps of a good man are ordered by the Lord: and he delighteth in his way.",
+                              "recommendations":["Book 2:1", "Book 2:2", "Book 2:3"]},
 
-        ]
+        ];
+        HK.habakkuk_message = "Hello World!";
     </script>
     <script src="{{ STATIC_URL }}biblestudy/biblestudy.js"></script>
 
