--- a/web/templates/biblestudy.html
+++ b/web/templates/biblestudy.html
@@ -45,8 +45,8 @@
 {% endblock content %}
 
 {% block help %}
-    <em>Select or Search for a scripture and Habakkuk will recommend other
-        verses based on their usage on Twitter </em>
+    <em>Habakkuk recommends Bible verses based on their usage on Twitter. Simply search or select a Bible verse below.</em>
+
 {% endblock help %}
 
 {%  block sidebar_content %}
