--- a/web/templates/clustering.html
+++ b/web/templates/clustering.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load jsonify %}
-{% block title %}Cluster Dendogram view{%endblock%}
+{% block title %}Cluster Dendrogram View{%endblock%}
 
 {% block head %}
     <link href="{{STATIC_URL}}clustering/clustering.css" rel="stylesheet">
@@ -28,8 +28,7 @@
 {% endblock content %}
 
 {% block help %}
-    <em>This view shows a D3 cluster dendogram of popular Bible verses and their related verses based on Twitter usage.
-        </em>
+    <em>This view shows a D3 cluster dendrogram of popular Bible verses and their related verses based on Twitter usage.</em>
 {% endblock help %}
 
 {%  block sidebar_content %}
