--- a/web/static/biblestudy/partials/biblestudy-sidebar.html
+++ b/web/static/biblestudy/partials/biblestudy-sidebar.html
@@ -1,11 +1,17 @@
 <div class="row">
-    <form class="navbar-form pull-left">
-        <input type="text">
-        <button type="submit" class="btn">Submit</button>
-    </form>
+ <div class="col-lg-12">
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Search!</button>
+      </span>
+      <input type="text" class="form-control" placeholder="example: faith, hope, love">
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
 </div>
 
 <div class="row">
-    <p class="table-leader">Select a specific Bible verse</p>
+    <div class="col-lg-12">
+    <p class="table-leader">Search Bible Verses by "popularity"</p>
     <div class="gridStyle" ng-grid="gridOptions"></div>
+    </div>
 </div>
