--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Habakkuk [Alpha]</a>
+          <a class="navbar-brand" href="/">Habakkuk [Alpha]</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -47,6 +47,7 @@
               <div class="page-header">
                 <h1>{% block title %}{% endblock title %}</h1>
                 <p class="lead">{% block help %} {% endblock help %}</p>
+                <small>This app is still in development so some actions aren't implemented yet. :-)</small>
               </div>
                 <div class="row">
                     <!-- Sidebar -->
