--- a/web/static/biblestudy/partials/biblestudy-sidebar.html
+++ b/web/static/biblestudy/partials/biblestudy-sidebar.html
@@ -2,9 +2,9 @@
  <div class="col-lg-12">
     <div class="input-group">
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Search!</button>
+        <button ng-click="search_action()" class="btn btn-default" type="button">Search!</button>
       </span>
-      <input type="text" class="form-control" placeholder="example: faith, hope, love">
+      <input type="text" class="form-control" placeholder="{{ text_search.placeholder }}" ng-model="text_search.text">
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
 </div>
