--- a/web/static/biblestudy/partials/biblestudy-content.html
+++ b/web/static/biblestudy/partials/biblestudy-content.html
@@ -1,17 +1,17 @@
-<p>Showing {{ search_results_count }} of {{ total_search_results_count }} Popular Bible verses on Twitter for <a href="#">February 14, 2013</a></p>
+<p>Showing {{ search_results.count }} of {{ search_results.total }} Popular Bible verses on Twitter for <a href="#"> {{ search_results.date }}</a></p>
 <!-- Special Message or "Clicked" verse -->
 <div class="list-group">
     <div class="list-group-item" ng-if="show_habakkuk_message">
         <h4 class="list-group-item-heading">Message from Habakkuk Team</h4>
         <p class="list-group-item-text">
-        {{ habakkuk_message }}
+        {{ search_results.habakkuk_message }}
         </p>
     </div>
 </div>
 
 <!-- search results -->
 <div class="list-group">
-    <a href="#" class="list-group-item" ng-repeat="result in search_results">
+    <a href="#" class="list-group-item" ng-repeat="result in search_results.results">
         <h4 class="list-group-item-heading">{{ result.bibleverse }}</h4>
         <p class="list-group-item-text">
         {{ result.text }}
