added jasmine tests for search

--- a/web/static/biblestudy/partials/biblestudy-content.html
+++ b/web/static/biblestudy/partials/biblestudy-content.html
@@ -12,7 +12,7 @@
 <br/>
 <br/>
 
-<p>Showing {{ search_results.count }} of {{ search_results.total }} Popular Bible verses on Twitter for <a href="#"> {{ search_results.date }}</a></p>
+<p>Showing {{ search_results.count }} of {{ search_results.total }} Popular Bible verses on Twitter for <a href="#"> {{ search_results.date_str }}</a></p>
 <!-- Special Message or "Clicked" verse -->
 <div class="list-group">
     <div class="list-group-item" ng-if="show_habakkuk_message">
