--- a/web/static/biblestudy/partials/biblestudy-sidebar.html
+++ b/web/static/biblestudy/partials/biblestudy-sidebar.html
@@ -1,3 +1,5 @@
+<!-- NOTICE: This is not used anymore. Please see biblestudy-content.html -->
+
 <div class="row">
  <div class="col-lg-12">
     <div class="input-group">
