--- a/web/static/biblestudy/partials/biblestudy-content.html
+++ b/web/static/biblestudy/partials/biblestudy-content.html
@@ -1,19 +1,24 @@
 <!-- search box -->
 <div class="row">
  <div class="col-lg-12">
+    <form ng-submit="search_action()" class="navbar-form navbar-left" role="search">
     <div class="input-group">
       <span class="input-group-btn">
-        <button ng-click="search_action()" class="btn btn-default" type="button">Search!</button>
+        <button class="btn btn-default" type="submit">Submit</button>
       </span>
       <input type="text" class="form-control" placeholder="{{ search_params.placeholder }}" ng-model="search_params.text">
-    </div><!-- /input-group -->
+    </div>
+    </form>
+
+     <!-- /input-group -->
   </div><!-- /.col-lg-6 -->
 </div>
 <br/>
 <br/>
 
-<p>Showing {{ search_results.count }} of {{ search_results.total }} Popular Bible verses on Twitter for <a href="#"> {{ search_results.date_str }}</a></p>
+<p>Showing {{ search_results.count }} of {{ search_results.total }} Popular Bible verses on Twitter.</p>
 <!-- Special Message or "Clicked" verse -->
+<!--
 <div class="list-group">
     <div class="list-group-item" ng-if="show_habakkuk_message">
         <h4 class="list-group-item-heading">Message from Habakkuk Team</h4>
@@ -22,6 +27,7 @@
         </p>
     </div>
 </div>
+-->
 
 <!-- search results -->
 
