--- a/web/static/biblestudy/partials/biblestudy-content.html
+++ b/web/static/biblestudy/partials/biblestudy-content.html
@@ -1,12 +1,12 @@
 <!-- search box -->
 <div class="row">
  <div class="col-lg-12">
-    <form ng-submit="search_action()" class="navbar-form navbar-left" role="search">
+    <form handle-phone-submit ng-submit="search_action()"  class="navbar-form navbar-left" role="search">
     <div class="input-group">
       <span class="input-group-btn">
         <button class="btn btn-default" type="submit">Submit</button>
       </span>
-      <input type="text" class="form-control" placeholder="{{ search_params.placeholder }}" ng-model="search_params.text">
+      <input name="search_text" type="text" class="form-control" placeholder="{{ search_params.placeholder }}" ng-model="search_params.text">
     </div>
     </form>
 
