--- a/web/templates/biblestudy.html
+++ b/web/templates/biblestudy.html
@@ -31,7 +31,7 @@
 {% endblock content %}
 
 {% block help %}
-    <em>Habakkuk recommends Bible verses based on their usage on Twitter. Simply search or select a Bible verse below.</em>
+    <em>Habakkuk recommends Bible verses based on their usage on Twitter. Enter a search to find scriptures related to a topic.</em>
 {% endblock help %}
 
 {%  block body_content %}
