--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -30,10 +30,10 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/biblestudy/">Bible Study</a></li>
-            <li class="active"><a href="/clusters/">Clusters</a></li>
-            <li class="active"><a href="http://technicalelvis.com/blog">About</a></li>
-            <li class="active"><a href="mailto:me@technicalelvis.com?Subject=User%20feedback" target="_top">Contact</a>
+            <li><a href="/biblestudy/">Bible Study</a></li>
+            <!-- <li><a href="/clusters/">Clusters</a></li> -->
+            <li><a href="/about/">About</a></li>
+            <li><a href="mailto:me@technicalelvis.com?Subject=User%20feedback" target="_top">Contact</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -47,7 +47,6 @@
               <div class="page-header">
                 <h1>{% block title %}{% endblock title %}</h1>
                 <p class="lead">{% block help %} {% endblock help %}</p>
-                <small>This app is still in development so some actions aren't implemented yet. :-)</small>
               </div>
               {% block body_content %}{% endblock body_content %}
             </div>
