moar about.html

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -3,9 +3,33 @@
 
 
 {%  block body_content %}
-<p class="lead">
-    I am <a href="https://twitter.com/telviscalhoun">@telviscalhoun</a>
-    on twitter. My email is: me [at] technicalelvis [dot] com. My personal blog is
-    <a href="http://technicalelvis.com/blog/category/twitter_mining/"> here.</a>
-</p>
+
+    <h2> What is bakkify?</h2>
+    <p class="lead"> Bakkify is an app that analyzes how religious people use social media. It's based on a
+    <a href="http://technicalelvis.com/blog/category/twitter_mining/"> series of posts from my blog.</a></p>
+
+    <h2> How does bakkify work?</h2>
+    <p class="lead"> Bakkify searches tweets from <a href="https://dev.twitter.com/docs/streaming-apis">twitter's public
+        stream </a> for Bible verse references. Next I perform some offline analysis to correlate "topics" to
+        specific Bible verses ranked by relevance.</p>
+
+    <h2> Why are you doing this?</h2>
+    <p class="lead"> I want to know <i>why</i> certain people have an affinity toward certain scriptures. Lots of
+     Christians use <a href="https://twitter.com/search?q=john%203%3A16">twitter.com</a> to evangelize,
+        so its a good place to start mining for patterns in Bible usage.</p>
+
+    <h2> Related Sites</h2>
+    <ul>
+        <li><a href="http://www.openbible.info/blog/">Stephen Smith's openbible.info</a> is just plain awesome. What are you giving up for Lent? </li>
+        <li><a href="http://datadrivensecurity.info/blog/">Data Driven Security</a> is a blog and podcast that is primarily
+        focused on data analysis techniques use to detect network security events.</li>
+        <li><a href="http://www.covert.io/">covert.io</a> has great posts on the intersection between <i>Big Data</i> and security.</li>
+        <li><a href="http://www.elasticsearch.org/"> elasticsearch.org</a>: because its bonsai cool! </li>
+    </ul>
+
+    <h2> Contact info</h2>
+    <p class="lead">
+        I am <a href="https://twitter.com/telviscalhoun">@telviscalhoun</a>
+        on twitter. Email: me [at] technicalelvis [dot] com.
+    </p>
 {%  endblock body_content %}
