--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,7 +11,7 @@
     <script src="{{ STATIC_URL }}vendor/jquery/jquery-1.9.1.min.js"></script>
     <script src="{{ STATIC_URL }}vendor/bootstrap/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habakkuk [Alpha]</title>
+    <title>bakkify</title>
     {% block head %}{% endblock head %}
 </head>
 
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Habakkuk [Alpha]</a>
+          <a class="navbar-brand" href="/">bakkify</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
