fixed typo in about.html

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -22,7 +22,7 @@
     <ul>
         <li><a href="http://www.openbible.info/blog/">Stephen Smith's openbible.info</a> is just plain awesome. What are you giving up for Lent? </li>
         <li><a href="http://datadrivensecurity.info/blog/">Data Driven Security</a> is a blog and podcast that is primarily
-        focused on data analysis techniques use to detect network security events.</li>
+        focused on data analysis techniques used to detect network security events.</li>
         <li><a href="http://www.covert.io/">covert.io</a> has great posts on the intersection between <i>Big Data</i> and security.</li>
         <li><a href="http://www.elasticsearch.org/"> elasticsearch.org</a>: because its bonsai cool! </li>
     </ul>
