edits to 'what is bakkify'

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -5,7 +5,7 @@
 {%  block body_content %}
 
     <h2> What is bakkify?</h2>
-    <p class="lead"> Bakkify is an app that analyzes how religious people use social media. It's based on a
+    <p class="lead"> Bakkify is an app that analyzes how Bible verses are used on social media. It's based on a
     <a href="http://technicalelvis.com/blog/category/twitter_mining/"> series of posts from my blog.</a></p>
 
     <h2> How does bakkify work?</h2>
