start js for topics app. add code coverage for javascript

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -30,10 +30,10 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/biblestudy/">Bible Study</a></li>
-            <!-- <li><a href="/clusters/">Clusters</a></li> -->
-            <li><a href="/about/">About</a></li>
-            <li><a href="mailto:me@technicalelvis.com?Subject=User%20feedback" target="_top">Contact</a>
+            <li><a href="/topics/">trending topics</a></li>
+            <li><a href="/biblestudy/">bible search</a></li>
+            <li><a href="/about/">about</a></li>
+            <li><a href="mailto:me@technicalelvis.com?Subject=User%20feedback" target="_top">contact</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
