--- a/web/templates/topics.html
+++ b/web/templates/topics.html
@@ -17,6 +17,11 @@
                     "es_phrase": "don\u2019t worry about tomorrow",
                     "bibleverse" : "matthew 6:34",
                     "search_url" : "http://localhost:8000/biblestudy/?search=worry+tomorrow"
+                },
+                {
+                    "es_phrase": "some more text",
+                    "bibleverse" : "matthew 8:8",
+                    "search_url" : "http://localhost:8000/biblestudy/?search=worry+tomorrow"
                 }
             ]
         };
