Implement phrase clustering used to sort phrases within a topic.

--- a/web/templates/topics.html
+++ b/web/templates/topics.html
@@ -1,30 +1,12 @@
 {% extends "base.html" %}
+{% load jsonify %}
 {% block head %}
     <link href="{{ STATIC_URL }}biblestudy/biblestudy.css" rel="stylesheet">
     <script src="{{ STATIC_URL }}vendor/angular/angular.min.js"></script>
 
     <script type="text/javascript">
-        var HK = {}
-        HK.results = {
-            'count': 5,
-            'topics' : [
-                {
-                    "es_phrase": "love your enemies, do good to those who hate you",
-                    "bibleverse": "luke 6:27",
-                    "search_url" : "http://localhost:8000/biblestudy/?search=enemies+good"
-                },
-                {
-                    "es_phrase": "don\u2019t worry about tomorrow",
-                    "bibleverse" : "matthew 6:34",
-                    "search_url" : "http://localhost:8000/biblestudy/?search=worry+tomorrow"
-                },
-                {
-                    "es_phrase": "some more text",
-                    "bibleverse" : "matthew 8:8",
-                    "search_url" : "http://localhost:8000/biblestudy/?search=worry+tomorrow"
-                }
-            ]
-        };
+        var HK = {};
+        HK.results = {{ topic_results | jsonify }};;
     </script>
     <script src="{{ STATIC_URL }}topics/topics.js"></script>
 {% endblock %}
