--- a/web/static/topics/partials/topics-content.html
+++ b/web/static/topics/partials/topics-content.html
@@ -1,7 +1,8 @@
 <div class="row">
+    <div infinite-scroll='scroll_action()' infinite-scroll-disabled='busy' infinite-scroll-distance='0'>
     <div class="col-xs-6 col-md-6">
-        <div class="list-group"  ng-repeat="topic in result_columns[0]">
-            <a href="{{ topic.search_url }}" class="list-group-item active">
+        <div class="list-group"  ng-repeat="phrase in result_columns[0]">
+            <a href="{{ topic.search_url }}" class="list-group-item">
                 <h4 class="list-group-item-heading">{{ topic.phrase }}</h4>
                 <p class="list-group-item-text">{{ topic.bibleverse }}</p>
             </a>
@@ -9,11 +10,12 @@
     </div>
     <div class="col-xs-6 col-md-6">
         <div class="list-group"  ng-repeat="topic in result_columns[1]">
-            <a href="{{ topic.search_url }}" class="list-group-item active">
+            <a href="{{ topic.search_url }}" class="list-group-item">
                 <h4 class="list-group-item-heading">{{ topic.phrase }}</h4>
                 <p class="list-group-item-text">{{ topic.bibleverse }}</p>
             </a>
         </div>
+    </div>
     </div>
 </div>
 
