--- a/web/templates/biblestudy.html
+++ b/web/templates/biblestudy.html
@@ -6,7 +6,7 @@
     <link href="{{ STATIC_URL }}vendor/angular-ui-ng-grid/ng-grid.css" rel="stylesheet">
 
     <script src="{{ STATIC_URL }}vendor/underscore/underscore-min.js"></script>
-    <script src="{{ STATIC_URL }}vendor/angular/angular.min.js"></script>
+    <script src="{{ STATIC_URL }}vendor/angular/angular.js"></script>
     <script src="{{ STATIC_URL }}vendor/angular-ui-ng-grid/ng-grid-2.0.7.min.js"></script>
 
 
