--- a/web/static/topics/partials/topics-content.html
+++ b/web/static/topics/partials/topics-content.html
@@ -1,7 +1,30 @@
 <div class="row">
-    <div infinite-scroll='scroll_action()' infinite-scroll-disabled='busy' infinite-scroll-distance='0'>
+
+    <script>
+    /*
     <div class="col-xs-6 col-md-6">
-        <div class="list-group"  ng-repeat="phrase in result_columns[0]">
+        <p>Holiday Topics:</p>
+        <a href="http://localhost:8000/topics/newyears/">New Years</a> <br/>
+        <a href="http://localhost:8000/topics/memorialday/">Memorial Day</a> <br/>
+        <a href="http://localhost:8000/topics/independence">US Independence Day</a>
+    </div>
+
+    <div class="col-xs-6 col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p>Holiday Topics for 2014:</p>
+        <a href="http://localhost:8000/topics/memorial_day_2014">Memorial Day 2014</a>
+      </div>
+    </div>
+    </div>
+    */
+    </script>
+
+    <!-- phrases -->
+    Popular phrases for all tweets. Click to see related bible verses.
+    <div infinite-scroll='scroll_action()' infinite-scroll-disabled='busy' infinite-scroll-distance='1'>
+    <div class="col-xs-6 col-md-6">
+        <div class="list-group"  ng-repeat="topic in result_columns[0]">
             <a href="{{ topic.search_url }}" class="list-group-item">
                 <h4 class="list-group-item-heading">{{ topic.phrase }}</h4>
                 <p class="list-group-item-text">{{ topic.bibleverse }}</p>
