group phrases by bibleverse

--- a/web/templates/topics.html
+++ b/web/templates/topics.html
@@ -23,7 +23,8 @@
 
 
 {% block help %}
-    <em>Topics!</em>
+
+        Here are popular twitter phrases per bible verse. Click on a phrase to find other relevant bible verses.
 {% endblock help %}
 
 
