--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -30,7 +30,23 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/topics/">trending topics</a></li>
+
+            <!-- -->
+              <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Holiday Topics <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+              <li><a href="/topics/">All Topics </a></li>
+              <li class="divider"></li>
+              <li><a href="/topics/newyears/">New Years</a></li>
+              <li><a href="/topics/valentines/">Valentine's Day</a></li>
+              <li><a href="/topics/memorialday/">Memorial Day</a></li>
+              <li><a href="/topics/independence/">July 4th</a></li>
+              <li><a href="/topics/thanksgiving/">Thanksgiving Day</a></li>
+              <li><a href="/topics/christmas/">Christmas</a></li>
+
+          </ul>
+        </li>
+            <!-- -->
             <li><a href="/biblestudy/">bible search</a></li>
             <li><a href="/about/">about</a></li>
             <li><a href="mailto:me@technicalelvis.com?Subject=User%20feedback" target="_top">contact</a>
