update fabric, bulk_load, dump_data for topics

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">bakkify</a>
+          <a class="navbar-brand" href="/topics/">bakkify</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
