more layout fixes

--- a/web/templates/topics.html
+++ b/web/templates/topics.html
@@ -23,8 +23,7 @@
 
 
 {% block help %}
-
-        Here are popular twitter phrases per bible verse. Click on a phrase to find other relevant bible verses.
+        Showing popular twitter phrases per bible verse. Click on a phrase to search 'related' verses.
 {% endblock help %}
 
 
